adjust account card styles to prevent badge overflow

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -66,7 +66,6 @@ form {
     padding-top: 12px;
     padding-bottom: 16px;
     text-align: center;
-    max-width: 240px;
     max-height: 300px;
 }
 
@@ -91,7 +90,9 @@ form {
 }
 
 .account-card-logo {
-    width: 70%;
+    width: 160px;
+    margin-left: 24px;
+    margin-right: 24px;
 }
 
 .platform-badge {
@@ -102,6 +103,8 @@ form {
     box-shadow: 0px .125rem .25rem rgb(135, 135, 135);
     padding: 0.5rem 1rem;
     margin: 0.5rem 0;
+    margin-left: 6px;
+    margin-right: 6px;
     border-radius: 0.3rem;
     justify-content: center;
     vertical-align: middle;   
